Refactor resource handling in EtpetsAgentLogic to use a generic resource class and streamline consumption logic